upload profil picture

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,16 +26,8 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#spring.jmx.unique-names=true
-#management.endpoints.jmx.domain=com.wildcodeschool.audacieuses
-
-## Email confirmation
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=toulousaine.auda@gmail.com
-#spring.mail.password=4patates!
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jmx.unique-names=true
+management.endpoints.jmx.domain=com.wildcodeschool.wildmotorstore
 
 # pictures
 spring.servlet.multipart.max-file-size=128MB
@@ -48,4 +40,3 @@ spring.servlet.multipart.file-size-threshold=2KB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=/var/www/shop
-spring.thymeleaf.cache=false
