--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jmx.unique-names=true
-management.endpoints.jmx.domain=com.wildcodeschool.wildmotorstore
+management.endpoints.jmx.domain=com.wildcodeschool.store
 
 # pictures
 spring.servlet.multipart.max-file-size=128MB
