--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,13 @@
 	</parent>
 	<groupId>motor.bike</groupId>
 	<artifactId>shop</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>shop</name>
-	<description>Demo project for Spring Boot</description>
+	<version>1.0</version>
+	<packaging>war</packaging>
+	<name>wildmotorstore</name>
+	<description>Boutique ecommerce de moto et d'accessoires</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
