--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 # Set here configurations for the database connection
 # Connection url for the database
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=Europe/Paris
+spring.datasource.url=jdbc:mysql://localhost:3306/wildmotorstore?serverTimezone=Europe/Paris
 # Username and password
 spring.datasource.username=SxmneQYc
 spring.datasource.password=XVN8aUy73Q7kqFJf
@@ -27,7 +27,7 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jmx.unique-names=true
-management.endpoints.jmx.domain=com.wildcodeschool.WildMotorStore
+management.endpoints.jmx.domain=com.wildcodeschool.wildmotorstore
 
 # pictures
 spring.servlet.multipart.max-file-size=128MB
