--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.jscience</groupId>
+			<artifactId>jscience</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.0.1.RELEASE</version>
