--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CLEARDB_DATABASE_URL=jdbc:mysql://localhost:3306/wildmotorstore?serverTimezone=Europe/Paris
+JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/wildmotorstore?serverTimezone=Europe/Paris
