--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 # ===============================
 # Set here configurations for the database connection
 # Connection url for the database
-spring.datasource.url=jdbc:mysql://localhost:3306/wildmotorstore?serverTimezone=Europe/Paris
+spring.datasource.url=jdbc:mysql://b7fb3946e72870:a2914cf3@us-cdbr-iron-east-04.cleardb.net/heroku_a589e6500cdf12f?reconnect=true
 # Username and password
-spring.datasource.username=SxmneQYc
-spring.datasource.password=XVN8aUy73Q7kqFJf
+spring.datasource.username=b7fb3946e72870
+spring.datasource.password=a2914cf3
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
