--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 # Set here configurations for the database connection
 # Connection url for the database
-spring.datasource.url=jdbc:mysql://b7fb3946e72870:a2914cf3@us-cdbr-iron-east-04.cleardb.net/heroku_a589e6500cdf12f?reconnect=true
+spring.datasource.url=mysql://b7fb3946e72870:a2914cf3@us-cdbr-iron-east-04.cleardb.net/heroku_a589e6500cdf12f?reconnect=true
 # Username and password
 spring.datasource.username=b7fb3946e72870
 spring.datasource.password=a2914cf3
