--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=a2914cf3
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
+server.servlet.session.timeout=120
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
