--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.password=a2914cf3
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
 server.servlet.session.timeout=120
+server.connection-timeout=-1
+spring.datasource.hikari.connection-timeout=-1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
