--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,13 @@
 # ===============================
 # Set here configurations for the database connection
 # Connection url for the database
-spring.datasource.url=mysql://b7fb3946e72870:a2914cf3@us-cdbr-iron-east-04.cleardb.net/heroku_a589e6500cdf12f?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=Europe/Paris
 # Username and password
-spring.datasource.username=b7fb3946e72870
-spring.datasource.password=a2914cf3
+spring.datasource.username=SxmneQYc
+spring.datasource.password=XVN8aUy73Q7kqFJf
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
-spring.datasource.hikari.connection-timeout=500
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
@@ -28,13 +27,12 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jmx.unique-names=true
-management.endpoints.jmx.domain=com.wildcodeschool.wildmotorstore
+management.endpoints.jmx.domain=com.wildcodeschool.WildMotorStore
 
 # pictures
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
-
 ## MULTIPART (MultipartProperties)
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
